--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,5 @@
 {
   "printWidth": 120,
-  "tabWidth": 2,
-  "useTabs": false,
-  "semi": true,
-  "singleQuote": false,
-  "trailingComma": "all",
-  "bracketSpacing": true,
-  "jsxBracketSameLine": false,
-  "arrowParens": "avoid"
+  "semi": false,
+  "trailingComma": "all"
 }
