--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "npm run build:dist && npm run build:example",
     "commitmsg": "commitlint -e $GIT_PARAMS",
     "commit": "git-cz",
-    "release": "semantic-release pre && npm publish && semantic-release post"
+    "release": "semantic-release"
   },
   "repository": {
     "type": "git",
@@ -28,25 +28,30 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^5.2.0",
-    "@commitlint/config-conventional": "^5.1.3",
-    "@semantic-release/github": "^2.2.0",
-    "@semantic-release/npm": "^2.3.0",
-    "awesome-typescript-loader": "^3.4.1",
-    "clean-webpack-plugin": "^0.1.17",
-    "commitizen": "^2.9.6",
-    "concurrently": "^3.5.1",
-    "copy-webpack-plugin": "^4.2.3",
-    "cz-conventional-changelog": "^2.1.0",
-    "husky": "^0.14.3",
-    "prettier": "^1.8.2",
-    "semantic-release": "^8.2.0",
-    "tslint": "^5.8.0",
-    "tslint-config-prettier": "^1.6.0",
-    "typescript": "^2.6.2",
-    "webpack": "^3.9.1",
-    "webpack-dev-server": "^2.9.5",
-    "webpack-merge": "^4.1.1"
+    "@commitlint/cli": "^9.1.2",
+    "@commitlint/config-conventional": "^9.1.2",
+    "@semantic-release/github": "^7.1.0",
+    "@semantic-release/npm": "^7.0.6",
+    "@typescript-eslint/eslint-plugin": "^4.1.0",
+    "@typescript-eslint/parser": "^4.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "commitizen": "^4.2.1",
+    "copy-webpack-plugin": "^6.1.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^7.5.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-simple-import-sort": "^5.0.3",
+    "husky": "^4.3.0",
+    "prettier": "^2.1.1",
+    "semantic-release": "^17.1.1",
+    "ts-loader": "^8.0.3",
+    "typescript": "^4.0.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "license": "MIT"
 }
