--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
+    "jsx": "react",
     "module": "commonjs",
     "moduleResolution": "node",
-    "target": "es5",
-    "jsx": "react",
-    "sourceMap": true
+    "sourceMap": true,
+    "target": "es5"
   },
   "include": ["./lib/**/*"],
   "exclude": ["node_modules"]
